format code table

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1033,7 +1033,7 @@ ol li ul li ol li ul li{
 }
 
 table thead th code.highlighter-rouge {
-    background-color: transparent;
+    background-color: #F5F5F5;
 }
 
 
