--- a/_includes/custom/sidebarconfigs.html
+++ b/_includes/custom/sidebarconfigs.html
@@ -1,11 +1,11 @@
-{% if page.sidebar == "home_sidebar" %}
-{% assign sidebar = site.data.sidebars.home_sidebar.entries %}
-
-{% elsif page.sidebar == "api_sidebar" %}
+{% if page.sidebar == "api_sidebar" %}
 {% assign sidebar = site.data.sidebars.api_sidebar.entries %}
 
 {% elsif page.sidebar == "templates_sidebar" %}
 {% assign sidebar = site.data.sidebars.templates_sidebar.entries %}
+
+{% elsif page.sidebar == "home_sidebar" %}
+{% assign sidebar = site.data.sidebars.home_sidebar.entries %}
 
 {% elsif page.sidebar == "mydoc_sidebar" %}
 {% assign sidebar = site.data.sidebars.mydoc_sidebar.entries %}
