--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -47,9 +47,9 @@
                 {% if site.feedback_disable == null or site.feedback_disable == false %}
 			{% include feedback.html %}
 		{% endif %}
-                <!--comment out this block if you want to hide search-->
+                <!--comment out this block if you want to hide search
                 <li>
-                    <!--start search-->
+                    <!--start search
                     <div id="search-demo-container">
                         <input type="text" id="search-input" placeholder="{{site.data.strings.search_placeholder_text}}">
                         <ul id="results-container"></ul>
@@ -66,8 +66,7 @@
                             fuzzy: true,
                     })
                     </script>
-                    <!--end search-->
-                </li>
+                </li><!--end search-->
             </ul>
         </div>
         </div>
